second attempt at fixing z-index of background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 1000%;
+    height: 100%;
     z-index: -10;
     opacity: .4;
-    /* background-repeat: repeat; */
 }
 #topicButtons {
     display: inline-flex;
